# IsaacSim_TransformerBipedal

./: .gitignore  README.md
3DOFTrans/: CMakeLists.txt  package.xml
3DOFTrans/launch/: display.launch  gazebo.launch
3DOFTrans/meshes/: Footright.STL  Hipleft.STL  Hipright.STL  Kneeleft.STL  Kneeright.STL
3DOFTrans/urdf/: 3DOFTrans.csv  3DOFTrans.urdf
3DOFTrans/urdf/3DOFTrans/: 3DOFTrans.usd
3DOFTrans/urdf/3DOFTrans/configuration/: 3DOFTrans_physics.usd  3DOFTrans_robot.usd  3DOFTrans_sensor.usd
Bullettransformer/: CMakeLists.txt  package.xml
Bullettransformer/launch/: display.launch  gazebo.launch
Bullettransformer/meshes/: Bubleft.STL  Bubright.STL  Footleft.STL  Footright.STL  Hipleft.STL  Hipright.STL  Kneeleft.STL  Kneeright.STL
Bullettransformer/urdf/: Bullettransformer.csv  Bullettransformer.urdf
Namtransformer/urdf/: Namtransformer.urdf
Namtransformer/urdf/Namtransformer/: Namtransformer.usd
SimpleTrans/: CMakeLists.txt  package.xml
SimpleTrans/config/: joint_names_SimpleTrans.yaml
SimpleTrans/launch/: display.launch  gazebo.launch
SimpleTrans/meshes/: Footleft.STL  Footright.STL  Hipleft.STL  Hipright.STL  Kneeleft.STL  Kneeright.STL
SimpleTrans/urdf/: SimpleTrans.csv  SimpleTrans.urdf
SimpleTrans/urdf/SimpleTrans/: SimpleTrans.usd
Transformer_IsaacLab/TransformerNam/: README.md  pyproject.toml
Transformer_IsaacLab/TransformerNam/scripts/: list_envs.py  random_agent.py  zero_agent.py
Transformer_IsaacLab/TransformerNam/scripts/rsl_rl/: play.py  train.py
Transformer_IsaacLab/TransformerNam/source/TransformerNam/: setup.py
Transformer_IsaacLab/TransformerNam/source/TransformerNam/TransformerNam/: ui_extension_example.py
Transformer_IsaacLab/TransformerNam/source/TransformerNam/TransformerNam/tasks/manager_based/transformernam/: __init__.py  transformernam_walk_env.py
Transformer_IsaacLab/TransformerNam/source/TransformerNam/config/: extension.toml
Transformer_IsaacLab/asset/: Transformer.usd
Transformer_IsaacLab/urdf/: Transformer_fixed.urdf  analyze_usd_joints.py  fix_urdf_paths.py
Transformer_IsaacLab/urdf/Transformer/: Transformer.usd
Transformer_IsaacLab/urdf/Transformer_fixed/: Transformer_fixed.usd
Transformer_nam/: CMakeLists.txt  package.xml
Transformer_nam/launch/: display.launch  gazebo.launch
Transformer_nam/meshes/: Baselink.STL  Bubright.STL  Footleft.STL  Footright.STL  Hipleft.STL  Hipright.STL  Kneeleft.STL  Kneeright.STL
Transformer_nam/urdf/: Transformer_nam.csv  Transformer_nam.urdf
Transformer_nam/urdf/Transformer_nam/: Transformer_nam.usd
transformer_nam/: README.md  isaaclab.sh  run.sh  run_direct.sh
transformer_nam/scripts/: check_joint_order.py  debug_robot_position.py  inspect_usd_structure.py  list_envs.py  random_agent.py  test_initial_env.py  zero_agent.py
transformer_nam/scripts/rsl_rl/: play.py  train.py
transformer_nam/source/transformer_nam/: setup.py
(+30 files in other folders)
