# Copyright (c) 2022-2026, The Isaac Lab Project Developers.
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformernam"
version = "0.1.0"
description = "Transformer bipedal robot locomotion tasks for Isaac Lab"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["robotics", "rl", "isaaclab", "bipedal", "locomotion"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "isaaclab",
]

[project.urls]
Homepage = "https://github.com/yourusername/transformernam"

# Setuptools configuration - QUAN TRỌNG!
[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["source/TransformerNam"]  # ← Thêm path đúng
include = ["TransformerNam*"]
exclude = ["logs*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.toml", "*.usd"]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["logs", "_isaac_sim", ".vscode", "_*", ".git"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "omniverse-extensions",
    "isaaclab",
    "isaaclab-contrib",
    "isaaclab-rl",
    "isaaclab-mimic",
    "isaaclab-tasks",
    "isaaclab-assets",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"omniverse-extensions" = ["isaacsim", "omni", "pxr", "carb", "usdrt", "Semantics", "curobo"]
"isaaclab" = ["isaaclab"]
"isaaclab-assets" = ["isaaclab_assets"]
"isaaclab-contrib" = ["isaaclab_contrib"]
"isaaclab-rl" = ["isaaclab_rl"]
"isaaclab-mimic" = ["isaaclab_mimic"]
"isaaclab-tasks" = ["isaaclab_tasks"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["transformernam", "scripts"]
exclude = ["**/__pycache__", "**/_isaac_sim", "**/logs", ".git", ".vscode"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "warning"
reportPrivateUsage = "warning"

[tool.codespell]
skip = '*.usd,*.usda,*.usdz,*.svg,*.png,_isaac_sim*,*.bib,*.css,*/_build'
quiet-level = 0
ignore-words-list = "haa,slq,collapsable,buss,reacher,thirdparty"

[tool.pytest.ini_options]
markers = ["isaacsim_ci: mark test to run in isaacsim ci"]
